--- a/src/components/TodoList.module.css
+++ b/src/components/TodoList.module.css
@@ -6,10 +6,10 @@
 .list {
   padding: 0.5rem;
   margin-top: 1rem;
-
+  
   border-radius: 0.25rem;
   background-color: #4b5563;
-
+  box-shadow: 0 4px 4px gray;
   list-style: none;
 }
 
